--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+.container{
+	border:2px solid black;
+	text-align:center;
+	padding:40px;
+	border-radius:10px
+	
+}
+.code-container{
+	display:flex;
+	/* border:1px solid red; */
+	width:75%;
+	margin:auto;
+	justify-content:space-between;
+	margin-top:40px;
+}
+.code{
+	width:80px;
+	height:80px;
+	border:1px solid black;
+	border-radius:5px;
+}
