--- a/styles.css
+++ b/styles.css
@@ -19,4 +19,10 @@
 	height:80px;
 	border:1px solid black;
 	border-radius:5px;
+
+	display:flex;
+	justify-content:center;   
+	align-items:center;       
+
+	font-size:24px;
 }
