--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,10 @@
 	border:1px solid black;
 	border-radius:5px;
 
-	display:flex;
-	justify-content:center;   
-	align-items:center;       
-
+	text-align:center;     
 	font-size:24px;
+
+	line-height:80px;      
+	padding:0;
+
 }
